Update Predictive_maintenance .ipynb
This case study explores the application of predictive maintenance within the automobile industry. It aims to utilize vehicle data to pre-emptively identify maintenance needs. By analyzing patterns in vehicle usage, maintenance history, and various operational metrics, this project seeks to enhance vehicle reliability, reduce downtime, and achieve cost savings in maintenance operations.

--- a/Predictive_maintenance .ipynb
+++ b/Predictive_maintenance .ipynb
@@ -307,7 +307,7 @@
    "source": [
     "## Interpretation\n",
     "\n",
-    "### Commercial vehicles cost more (765Eur) compared to private (788Eur), but the frequency of repair in private (4.42) is slightly lower compared to commercial (4.50). \n",
+    "### Commercial vehicles cost less (769Eur) compared to private (788Eur), but the frequency of repair in private (4.42) is slightly lower compared to commercial (4.50). \n",
     "\n",
     "### For owners and operators, understanding these differences can inform budgeting for maintenance costs. Businesses using commercial vehicles may anticipate more frequent repairs but can also expect slightly lower costs per repair. In contrast, rivate users might face repairs less frequently but with a higher cost per instance. These emphasize on the importance of preventive maintenance and budget planning."
    ]
